Fixing layout issues

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -42,11 +42,11 @@
 }
 
 .app-main{
-         
+        //  margin-inline-start: auto;
         grid-row: 1/-1;
         width: 100%;
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
         grid-template-rows: 100px 1fr 120px 0.5fr;
         overflow: scroll;
         overflow-x: hidden;
@@ -55,7 +55,7 @@
     
     .layout-container{
         display: grid;
-        grid-template-columns: auto 89.5vw;
+        grid-template-columns: 220px 1fr;
         grid-template-rows: 80px 72dvh 120px;
 
 }
