--- a/src/assets/styles/cmps/MainNav.scss
+++ b/src/assets/styles/cmps/MainNav.scss
@@ -2,6 +2,7 @@ $primary-color: #fff;
 $secondary-color: #aaa;
 
 .main-nav {
+    z-index: 200;
     font-size: 0.8125rem;
     min-width: 215px;
     max-width: 200px;
